--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Evens side</title>
 </head>
 <body>
-    My name is Even!!!
+    <nav>
+        Logo
+    </nav>
+<main>  
+
+        <h1>Evens Øie Eid</h1>
+        <a href="/dashboard.htm" target="_blank">Dashboard</a>
+        <img src="https://cdnb.artstation.com/p/assets/images/images/043/368/677/large/fateburn-dreamy-night-01-grain.jpg?1637078619" alt="">
+        <img src="./assets/HTML Practise Assets/about.jpg" alt="">
+        <h2>Introduction</h2>
+        <p>My name is Even Øie Eid and I live in Norway. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit perspiciatis maiores labore eligendi sit odio eveniet neque earum, beatae excepturi pariatur omnis rerum? Labore dicta sit blanditiis tempore a.</p>
+        <p>New thing</p> 
+        <button>321</button>
+        <div>
+            <b>Bold</b>
+        </div>
+        <i>Itallic</i>
+    </div>
+    <div>
+        <a href="https://www.instagram.com/even.eid/" target="_blank">My Instragram</a>
+    </div>
+    <section>
+    <h1>To Do List</h1>
+    <ul>
+        <li>Learn Coding</li>
+        <li>Get good enough to land a job</li>
+        <li>Finish the coding course</li>
+    </ul>
+    </section>
+    <section>
+        <h1>Learn Coding</h1>
+        <ol>
+            <li>Finish the course</li>
+            <li>Study coding in depth</li>
+            <li>Study for interviews</li>
+        </ol>
+    </section>
+</main>
+    <footer>
+        Copyright terms & conditions 
+    </footer>
 </body>
 </html>
