--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
             <li>Study for interviews</li>
         </ol>
     </section>
+    <section>
+        <h1>Login</h1>
+        <form>
+            <div>
+                <label for="">Email</label>
+                <input type="email" required/>
+            </div>
+            <hr>
+            <div>
+                <label for="">Password</label>
+                <input type="password"/>
+            </div>
+            <hr>
+            <div>
+                <label for="">Age</label>
+                <input type="number"/>
+            </div>
+            <hr>
+            <div>
+                <label for="">Date</label>
+                <input type="date"/>
+            </div>
+            <hr>
+            <button>Submit</button>
+        </form>
+    </section>
 </main>
     <footer>
         Copyright terms & conditions 
