--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evens side</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav>
@@ -14,8 +15,6 @@
 
         <h1>Evens Øie Eid</h1>
         <a href="/dashboard.htm" target="_blank">Dashboard</a>
-        <img src="https://cdnb.artstation.com/p/assets/images/images/043/368/677/large/fateburn-dreamy-night-01-grain.jpg?1637078619" alt="">
-        <img src="./assets/HTML Practise Assets/about.jpg" alt="">
         <h2>Introduction</h2>
         <p>My name is Even Øie Eid and I live in Norway. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit perspiciatis maiores labore eligendi sit odio eveniet neque earum, beatae excepturi pariatur omnis rerum? Labore dicta sit blanditiis tempore a.</p>
         <p>New thing</p> 
