--- a/index.html
+++ b/index.html
@@ -4,74 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evens side</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav>
-        Logo
-    </nav>
-<main>  
-
-        <h1>Evens Øie Eid</h1>
-        <a href="/dashboard.htm" target="_blank">Dashboard</a>
-        <h2>Introduction</h2>
-        <p>My name is Even Øie Eid and I live in Norway. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus velit perspiciatis maiores labore eligendi sit odio eveniet neque earum, beatae excepturi pariatur omnis rerum? Labore dicta sit blanditiis tempore a.</p>
-        <p>New thing</p> 
-        <button>321</button>
-        <div>
-            <b>Bold</b>
-        </div>
-        <i>Itallic</i>
+    <div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Portefolio</a>
+            <a href="#">Contact</a>
+            <div class="animation start-home"></div>
+        </nav>
     </div>
     <div>
-        <a href="https://www.instagram.com/even.eid/" target="_blank">My Instragram</a>
+        <ul class="main-nav">
+            <li class="item1">
+                <div class="bg"></div>
+            </li>
+            <li class="item2">
+                <div class="bg"></div>
+            </li>
+            <li class="item3">
+                <div class="bg"></div>
+            </li>
+            <li class="item4">
+                <div class="bg"></div>
+            </li>
+            <li class="item5">
+                <div class="bg"></div>
+            </li>
+        </ul>
     </div>
-    <section>
-    <h1>To Do List</h1>
-    <ul>
-        <li>Learn Coding</li>
-        <li>Get good enough to land a job</li>
-        <li>Finish the coding course</li>
-    </ul>
-    </section>
-    <section>
-        <h1>Learn Coding</h1>
-        <ol>
-            <li>Finish the course</li>
-            <li>Study coding in depth</li>
-            <li>Study for interviews</li>
-        </ol>
-    </section>
-    <section>
-        <h1>Login</h1>
-        <form>
-            <div>
-                <label for="">Email</label>
-                <input type="email" required/>
-            </div>
-            <hr>
-            <div>
-                <label for="">Password</label>
-                <input type="password"/>
-            </div>
-            <hr>
-            <div>
-                <label for="">Age</label>
-                <input type="number"/>
-            </div>
-            <hr>
-            <div>
-                <label for="">Date</label>
-                <input type="date"/>
-            </div>
-            <hr>
-            <button>Submit</button>
-        </form>
-    </section>
-</main>
-    <footer>
-        Copyright terms & conditions 
-    </footer>
-</body>
+    <div class="image">
+        <img src="https://images.hdqwalls.com/wallpapers/bike-rider-with-gears-on-minimal-5k-k3.jpg" alt="">
+    </div>
+    </body>
 </html>
